add TEST for continuation